--- a/package.json
+++ b/package.json
@@ -40,6 +40,14 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tiptap/extension-color": "^3.9.0",
+    "@tiptap/extension-image": "^3.9.0",
+    "@tiptap/extension-link": "^3.9.0",
+    "@tiptap/extension-placeholder": "^3.9.0",
+    "@tiptap/extension-text-style": "^3.9.0",
+    "@tiptap/extension-underline": "^3.9.0",
+    "@tiptap/react": "^3.9.0",
+    "@tiptap/starter-kit": "^3.9.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
