--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
+    "react-markdown": "^10.1.0",
     "react-paginate": "^8.3.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -80,6 +81,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
