--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tiptap/extension-underline": "^3.9.0",
     "@tiptap/react": "^3.9.0",
     "@tiptap/starter-kit": "^3.9.0",
+    "apollo3-cache-persist": "^0.15.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
