--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint"
   },
@@ -63,12 +63,12 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.454.0",
     "meilisearch": "^0.51.0",
-    "next": "15.2.4",
+    "next": "^16.1.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
-    "react": "^18.2.0",
+    "react": "^19.2.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.54.1",
     "react-markdown": "^10.1.0",
     "react-paginate": "^8.3.0",
