--- a/package.json
+++ b/package.json
@@ -89,5 +89,12 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "overrides": {
+    "next-auth": {
+      "next": "$next"
+    },
+    "react": "$react",
+    "react-dom": "$react-dom"
   }
 }
