--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build --webpack",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@arcjet/next": "^1.0.0-beta.15",
     "@hookform/resolvers": "^3.9.1",
     "@meilisearch/instant-meilisearch": "^0.27.0",
     "@radix-ui/react-accordion": "1.2.2",
@@ -89,12 +90,5 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
-  },
-  "overrides": {
-    "next-auth": {
-      "next": "$next"
-    },
-    "react": "$react",
-    "react-dom": "$react-dom"
   }
 }
