--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@apollo/client": "^3.13.8",
     "@arcjet/next": "^1.0.0-beta.15",
     "@hookform/resolvers": "^3.9.1",
-    "@meilisearch/instant-meilisearch": "^0.27.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -63,7 +62,6 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.454.0",
-    "meilisearch": "^0.51.0",
     "next": "^15.1.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
@@ -87,6 +85,8 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
