--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-markdown": "^10.1.0",
     "react-paginate": "^8.3.0",
     "react-resizable-panels": "^2.1.7",
+    "react-virtuoso": "^4.18.1",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
